infrastructure/vault/chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-prod
  namespace: prod
spec:
  ingressClassName: kong
  rules:
    - host: vault.taldev.no
      http:
        paths:
          - backend:
              service:
                name: vault-prod
                port:
                  number: 8200
            path: /
            pathType: Prefix
